# skeel

./: .gitignore  AGENTS.md  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: ci.yml  release.yaml
changelog/: config.yaml
changelog/releases/v0.1.0/: manifest.yaml  notes.md
changelog/releases/v0.1.0/entries/: introduce-skeel.md
changelog/releases/v0.10.0/: manifest.yaml  notes.md
changelog/releases/v0.10.0/entries/: unified-skill-inventory.md
changelog/releases/v0.2.0/: manifest.yaml  notes.md
changelog/releases/v0.2.0/entries/: custom-skill-installers-in-manifests.md  keyed-manifests-and-scope-based-targets.md  per-skill-update-results.md  pinned-manifest-skill-updates.md  reconciled-apply-workflow.md
changelog/releases/v0.3.0/: manifest.yaml  notes.md
changelog/releases/v0.3.0/entries/: version-flag.md
changelog/releases/v0.4.0/: manifest.yaml  notes.md
changelog/releases/v0.5.0/: manifest.yaml  notes.md
changelog/releases/v0.5.0/entries/: selective-skill-updates.md
changelog/releases/v0.6.0/: manifest.yaml  notes.md
changelog/releases/v0.7.0/: manifest.yaml  notes.md
changelog/releases/v0.7.0/entries/: remove-searches-user-scope.md  update-missing-skill-source-errors.md
changelog/releases/v0.7.1/: manifest.yaml  notes.md
changelog/releases/v0.8.0/: manifest.yaml  notes.md
changelog/releases/v0.9.0/: manifest.yaml  notes.md
changelog/releases/v1.0.0/: manifest.yaml  notes.md
changelog/unreleased/: agent-neutral-target-policy.md  clarify-successful-skill-removal-output.md  clearer-update-summaries.md  cli-help-examples.md  compact-github-source-syntax.md  default-manifest-path.md  desired-state-editing-and-json-output.md  diff-style-apply-output.md  dry-run-command-handling.md  dynamic-source-diff-output.md  errors-for-unmatched-manifest-selectors.md  fast-pinned-github-skill-reinstalls.md  github-cli-version-check.md  introduce-skeel.md  manual-skill-installers.md  non-interactive-skill-updates.md  parallel-skill-fetching.md  per-skill-update-results.md  quieter-output-for-up-to-date-skills.md  remove-skills-by-name.md  simpler-manifest-options.md  stable-live-progress-output-for-updates.md  unified-scoped-skill-updates.md  unified-skill-inventory.md  update-output-for-unchanged-versions.md
examples/: skills.yaml
src/skeel/: __init__.py  backends.py  cli.py  fast_install.py  gh.py  io.py  manifest.py  reconcile.py
tests/: test_backends.py  test_cli.py  test_fast_install.py  test_gh.py  test_manifest.py
(+7 files in other folders)
